[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

description = "syndicationd key value store daemon"
include     = ["src/**/*", "CHANGELOG.md"]
name        = "synd-kvsd"
readme      = "README.md"
version     = "0.1.0"

[[bin]]
name = "synd-kvsd"
path = "src/main.rs"

[dependencies]
synd-o11y = { path = "../synd_o11y", version = "0.1.8" }
synd-stdx = { path = "../synd_stdx", version = "0.1.0", features = ["color"] }

clap               = { workspace = true, features = ["derive", "env", "std"] }
tokio              = { workspace = true, features = ["rt", "rt-multi-thread", "io-util", "net", "signal", "fs", "sync", "macros", "time"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["chrono"] }

[features]

[dev-dependencies]

[lints]
workspace = true

[package.metadata.release]
pre-release-hook = ["just", "changelog", "{{version}}"]
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "unreleased", replace = "v{{version}}", min = 0 },
  { file = "CHANGELOG.md", search = "__release_date__", replace = "{{date}}", min = 0 },
  { file = "README.md", search = "/synd-kvsd-v.*/", replace = "/{{crate_name}}-v{{version}}/", min = 0 },
]
tag-message = "chore: release {{crate_name}} version {{version}}"

[package.metadata.dist]
dist = false
