[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
readme.workspace     = true
repository.workspace = true

description = "syndicationd protocol for kvsd"
include     = ["src/**/*", "CHANGELOG.md"]
name        = "synd-kvsd-protocol"
version     = "0.1.0"

[dependencies]
atoi      = { version = "2.0.0" }
bytes     = { workspace = true }
chrono    = { workspace = true, features = ["alloc"] }
futures   = { workspace = true }
nom       = { workspace = true }
thiserror = { workspace = true }
tokio     = { workspace = true, features = ["net", "time", "io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["net", "time", "io-util", "macros", "rt-multi-thread"] }

[lints]
workspace = true

[package.metadata.release]
pre-release-hook = ["just", "changelog", "{{version}}"]
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "unreleased", replace = "v{{version}}", min = 0 },
  { file = "CHANGELOG.md", search = "__release_date__", replace = "{{date}}", min = 0 },
  { file = "README.md", search = "/synd-kvsd-protcol-v.*/", replace = "/{{crate_name}}-v{{version}}/", min = 0 },
]
tag-message = "chore: release {{crate_name}} version {{version}}"

[package.metadata.dist]
dist = false
