[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

description = "syndicationd lib for tracing and opentelemetry ecosystem"
name        = "synd-o11y"
readme      = "README.md"
version     = "0.1.7"

[dependencies]
axum                               = { workspace = true }
http                               = { workspace = true }
opentelemetry                      = { version = "0.24.0" }
opentelemetry-appender-tracing     = { version = "0.5.0", default-features = false }                                                         # disable logs_level_enabled which affect global filtering
opentelemetry-http                 = { version = "0.13.0" }
opentelemetry-otlp                 = { version = "0.17.0", default-features = false, features = ["trace", "metrics", "logs", "grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.16.0" }
opentelemetry-stdout               = { version = "0.5.0", optional = true, default-features = false, features = ["metrics"] }
opentelemetry_sdk                  = { version = "0.24.1", features = ["logs", "rt-tokio"] }
rand                               = { workspace = true }
reqwest                            = { workspace = true }
serde                              = { workspace = true, features = ["derive"] }
serde_json                         = { workspace = true, optional = true }
tracing                            = { workspace = true }
tracing-opentelemetry              = { version = "0.25.0" }
tracing-subscriber                 = { workspace = true, features = ["registry", "fmt", "std"] }

[features]
opentelemetry-stdout = ["dep:opentelemetry-stdout", "dep:serde_json"]

[dev-dependencies]
insta               = { workspace = true, features = ["yaml", "redactions"] }
opentelemetry-proto = { version = "0.7.0", features = ["gen-tonic", "trace", "metrics", "logs", "with-serde"] }
tokio               = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tonic               = { version = "0.12.1", features = ["transport"] }

[lints]
workspace = true

[package.metadata.dist]
dist = false
