[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

description = "syndicationd lib for tracing and opentelemetry ecosystem"
name        = "synd-o11y"
readme      = "README.md"
version     = "0.1.8"

[dependencies]
axum                               = { workspace = true }
http                               = { workspace = true }
opentelemetry                      = { version = "0.24.0" }
opentelemetry-appender-tracing     = { version = "0.5.0", default-features = false }                                                         # disable logs_level_enabled which affect global filtering
opentelemetry-http                 = { version = "0.13.0" }
opentelemetry-otlp                 = { version = "0.17.0", default-features = false, features = ["trace", "metrics", "logs", "grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.16.0" }
opentelemetry-stdout               = { version = "0.5.0", optional = true, default-features = false, features = ["metrics"] }
opentelemetry_sdk                  = { version = "0.24.1", features = ["logs", "rt-tokio"] }
rand                               = { workspace = true }
reqwest                            = { workspace = true }
serde                              = { workspace = true, features = ["derive"] }
serde_json                         = { workspace = true, optional = true }
tracing                            = { workspace = true }
tracing-opentelemetry              = { version = "0.25.0" }
tracing-subscriber                 = { workspace = true, features = ["registry", "fmt", "std", "chrono"] }

[features]
opentelemetry-stdout = ["dep:opentelemetry-stdout", "dep:serde_json"]

[dev-dependencies]
insta               = { workspace = true, features = ["yaml", "redactions"] }
opentelemetry-proto = { version = "0.7.0", features = ["gen-tonic", "trace", "metrics", "logs", "with-serde"] }
tokio               = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tonic               = { version = "0.12.2", features = ["transport"] }

[lints]
workspace = true

[package.metadata.release]
pre-release-hook = ["just", "changelog", "{{version}}"]
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "unreleased", replace = "v{{version}}", min = 0 },
  { file = "CHANGELOG.md", search = "__release_date__", replace = "{{date}}", min = 0 },
  { file = "README.md", search = "/synd-o11y-v.*/", replace = "/{{crate_name}}-v{{version}}/", min = 0 },
]
tag-message = "chore: release {{crate_name}} version {{version}}"

[package.metadata.dist]
dist = false
