[package]
authors.workspace    = true
categories           = []
edition.workspace    = true
keywords             = ["ebpf"]
license.workspace    = true
readme.workspace     = true
repository.workspace = true

description = "syndicationd bpf userspace programs"
name        = "synd-perf"
publish     = false
version     = "0.1.0"

[dependencies]
anyhow     = "1"
cfg-if = "1.0.0"
env_logger = "0.10"
libc       = "0.2"
log        = "0.4"
tokio      = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[target.'cfg(target_os = "linux")'.dependencies]
aya              = "0.12"
aya-log          = "0.2"
synd-ebpf-common = { path = "../synd_ebpf_common", features = ["user"] }

[[bin]]
name = "synd-perf"
path = "src/main.rs"
