[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
readme.workspace     = true
repository.workspace = true

description = "syndicationd lib"
include     = ["src/**/*", "CHANGELOG.md"]
name        = "synd-stdx"
version     = "0.1.0"

[dependencies]
humantime      = { version = "2.1.0", optional = true }
supports-color = { version = "3.0.0", optional = true }

[features]
color     = ["dep:supports-color"]
humantime = ["dep:humantime"]

[lints]
workspace = true

[package.metadata.release]
pre-release-hook = ["just", "changelog", "{{version}}"]
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "unreleased", replace = "v{{version}}", min = 0 },
  { file = "CHANGELOG.md", search = "__release_date__", replace = "{{date}}", min = 0 },
  { file = "README.md", search = "/synd-stdx-v.*/", replace = "/{{crate_name}}-v{{version}}/", min = 0 },
]
tag-message = "chore: release {{crate_name}} version {{version}}"
