[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
readme.workspace     = true
repository.workspace = true

description = "syndicationd lib"
include     = ["src/**/*", "CHANGELOG.md"]
name        = "synd-stdx"
version     = "0.1.0"

[dependencies]
byte-unit      = { version = "5.1.4", optional = true, features = ["serde"] }
humantime      = { version = "2.1.0", optional = true }
mockall        = { workspace = true, optional = true }
serde          = { workspace = true, features = ["derive"] }
supports-color = { version = "3.0.1", optional = true }
tracing        = { workspace = true }

[features]
byte      = ["dep:byte-unit"]
color     = ["dep:supports-color"]
conf      = []
humantime = ["dep:humantime"]
mock      = ["dep:mockall"]

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true

[package.metadata.release]
pre-release-hook = ["just", "changelog", "{{version}}"]
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "unreleased", replace = "v{{version}}", min = 0 },
  { file = "CHANGELOG.md", search = "__release_date__", replace = "{{date}}", min = 0 },
  { file = "README.md", search = "/synd-stdx-v.*/", replace = "/{{crate_name}}-v{{version}}/", min = 0 },
]
tag-message = "chore: release {{crate_name}} version {{version}}"
