[package]
authors.workspace     = true
categories.workspace  = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
readme.workspace      = true
repository.workspace  = true

include = ["src/**/*", "CHANGELOG.md", "categories.toml"]
name    = "synd-term"
version = "0.2.5"

[[bin]]
name = "synd"
path = "src/main.rs"

[dependencies]
synd-auth = { path = "../synd_auth", version = "0.2.2" }
synd-feed = { path = "../synd_feed", version = "0.3.2", features = ["fake"] }
synd-o11y = { path = "../synd_o11y", version = "0.1.6" }

anyhow               = { workspace = true }
bitflags             = { workspace = true }
chrono               = { workspace = true, features = ["std", "now", "serde"] }
clap                 = { workspace = true, features = ["derive", "string", "color", "suggestions", "wrap_help", "env", "std"] }
crossterm            = { version = "0.27.0", features = ["event-stream"] }
directories          = "5.0.1"
edit                 = "0.1.5"
futures-util         = { workspace = true }
graphql_client       = { workspace = true }
html2text            = { version = "0.12" }
itertools            = { workspace = true }
nom                  = { version = "7.1.3", default-features = false, features = ["std"] }
nucleo               = "0.5.0"
open                 = "5.1.0"
parse_duration       = { workspace = true }
ratatui              = { version = "0.26.3" }
reqwest              = { workspace = true }
schemars             = { version = "0.8.21", default-features = false, features = ["derive"] }
serde                = { workspace = true, features = ["derive"] }
serde_json           = "1.0.117"
thiserror            = { workspace = true }
tokio                = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
toml                 = { version = "0.8.12", default-features = true }
tracing              = { workspace = true }
tracing-appender     = "0.2.3"
tracing-subscriber   = { workspace = true }
tui-big-text         = "0.4.4"
unicode-segmentation = "1.10.1"
update-informer      = { version = "1.1.0", default-features = false, features = ["crates", "reqwest", "rustls-tls"] }
url                  = { workspace = true }
# https://github.com/arkbig/throbber-widgets-tui/pull/5
# throbber-widgets-tui = "0.3.0"

[features]
# Integration test
integration = []

[dev-dependencies]
synd-api  = { path = "../synd_api" }
synd-test = { path = "../synd_test" }

assert_cmd   = { workspace = true }
axum-server  = { workspace = true }
fake         = { workspace = true }
insta        = { workspace = true }
kvsd         = { workspace = true }
serial_test  = { version = "3.1.1", default_features = false, features = ["async", "file_locks"] }
tempfile     = { workspace = true }
tokio-stream = "0.1.15"
tokio-util   = { workspace = true }

[lints]
workspace = true

[package.metadata.dist]
dist    = true
formula = "synd-term"
