[package]
authors.workspace     = true
categories.workspace  = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
readme.workspace      = true
repository.workspace  = true

include = ["src/**/*", "gql/**/*", "CHANGELOG.md", "categories.toml"]
name    = "synd-term"
version = "0.3.2"

[[bin]]
name = "synd"
path = "src/main.rs"

[dependencies]
synd-auth = { path = "../synd_auth", version = "0.2.5" }
synd-feed = { path = "../synd_feed", version = "0.3.5", features = ["fake", "jsonschema"] }
synd-o11y = { path = "../synd_o11y", version = "0.1.9" }
synd-stdx = { path = "../synd_stdx", version = "0.1.1", features = ["humantime", "conf"] }

anyhow               = { workspace = true }
bitflags             = { workspace = true }
chrono               = { workspace = true, features = ["std", "now", "serde", "clock"] }
chrono-humanize      = "0.2.3"
clap                 = { workspace = true, features = ["derive", "string", "color", "suggestions", "wrap_help", "env", "std"] }
crossterm            = { version = "0.28.1", features = ["event-stream"] }
directories          = "6.0.0"
edit                 = "0.1.5"
either               = { workspace = true }
futures-util         = { workspace = true }
graphql_client       = { workspace = true, features = ["graphql_query_derive"] }
html2text            = { version = "0.15.5" }
itertools            = { workspace = true }
nom                  = { workspace = true }
nom-language         = "0.1.0"
nucleo               = "0.5.0"
octocrab             = { workspace = true, features = ["timeout", "tracing"] }
open                 = "5.3.2"
ratatui              = { version = "0.30.0", default-features = false, features = ["crossterm", "underline-color", "layout-cache"] }
reqwest              = { workspace = true }
schemars             = { workspace = true, features = ["derive"] }
serde                = { workspace = true, features = ["derive"] }
serde_json           = "1.0.149"
thiserror            = { workspace = true }
tokio                = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream         = { version = "0.1.18", optional = true }
toml                 = { workspace = true }
tracing              = { workspace = true }
tracing-appender     = "0.2.3"
tracing-subscriber   = { workspace = true }
tui-widgets          = { version = "0.6.2", default-features = false, features = ["big-text"] }
unicode-segmentation = "1.12.0"
update-informer      = { version = "1.2.0", default-features = false, features = ["crates", "reqwest", "rustls-tls"] }
url                  = { workspace = true }

[features]
# Integration test
integration = ["dep:tokio-stream"]

[dev-dependencies]
synd-api  = { path = "../synd_api" }
synd-test = { path = "../synd_test" }

assert_cmd  = { workspace = true }
axum-server = { workspace = true }
criterion   = { workspace = true }
fake        = { workspace = true }
insta       = { workspace = true }
kvsd        = { workspace = true }
mockall     = { workspace = true }
pprof       = { workspace = true }
proptest    = { workspace = true }
rustls      = { workspace = true }
serial_test = { version = "3.2.0", default-features = false, features = ["async", "file_locks"] }
tempfile    = { workspace = true }
tokio-util  = { workspace = true }

[[bench]]
harness = false
name    = "render"

[lints]
workspace = true

[package.metadata.release]
pre-release-hook = ["just", "changelog", "{{version}}"]

pre-release-replacements = [
  { file = "CHANGELOG.md", search = "unreleased", replace = "v{{version}}", min = 0 },
  { file = "CHANGELOG.md", search = "__release_date__", replace = "{{date}}", min = 0 },
  { file = "README.md", search = "/synd-term-v.*/", replace = "/{{crate_name}}-v{{version}}/", min = 0 },
  { file = "README.md", search = "/synd-term-v.*", replace = "/{{crate_name}}-v{{version}}", min = 0 },
]
tag-message = "chore: release {{crate_name}} version {{version}}"

[package.metadata.dist]
dist    = true
formula = "synd-term"
