[package]
authors.workspace     = true
categories.workspace  = true
description.workspace = true
edition.workspace     = true
license.workspace     = true
readme.workspace      = true
repository.workspace  = true

name    = "synd_test"
publish = false
version = "0.1.0"

[dependencies]
synd_authn = { path = "../synd_authn" }

anyhow = { workspace = true }
axum   = { workspace = true }
tokio  = { workspace = true, features = ["rt-multi-thread", "net"] }

[lints]
workspace = true
