[package]
authors.workspace     = true
categories.workspace  = true
description.workspace = true
edition.workspace     = true
license.workspace     = true
readme.workspace      = true
repository.workspace  = true

name    = "synd-test"
publish = false
version = "0.1.0"

[dependencies]
synd-auth = { path = "../synd_auth" }

anyhow       = { workspace = true }
axum         = { workspace = true }
chrono       = { workspace = true }
futures-util = { workspace = true }
headers      = { workspace = true }
jsonwebtoken = { workspace = true }
kvsd         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tempfile     = { workspace = true }
tokio        = { workspace = true, features = ["rt-multi-thread", "net", "time"] }
tracing      = { workspace = true }


[lints]
workspace = true
