[package]
authors     = ["ymgyt"]
categories  = []
description = "syndicationd bpf programs"
edition     = "2021"
homepage    = "https://docs.syndicationd.ymgyt.io/synd-term/"
keywords    = ["ebpf"]
license     = "MIT OR Apache-2.0"
name        = "synd-ebpf"
readme      = "README.md"
repository  = "https://github.com/ymgyt/syndicationd"
version     = "0.1.0"

[dependencies]
aya-ebpf         = "0.1.0"
aya-log-ebpf     = "0.1.0"
synd-ebpf-common = { path = "../synd_ebpf_common" }

[[bin]]
name = "perf-example"
path = "src/perf_example/main.rs"

[profile.dev]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = false
panic            = "abort"
rpath            = false

[profile.release]
codegen-units = 1
lto           = true
panic         = "abort"

[workspace]
members = []
