[package]
authors.workspace    = true
categories           = ["ebpf"]
edition.workspace    = true
homepage.workspace   = true
keywords             = ["ebpf"]
license.workspace    = true
repository.workspace = true

description = "syndicationd bpf shared lib"
name        = "synd-ebpf-common"
readme      = "README.md"
version     = "0.1.0"

[features]
default = []
user    = ["aya"]

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.12", optional = true }

[lib]
path = "src/lib.rs"
