[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
readme.workspace     = true
repository.workspace = true

name    = "synd-ebpf-task"
publish = false
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
clap   = { workspace = true, features = ["derive", "std"] }
